@@ -71,11 +71,7 @@
 
 #include "yall/yall.h"
 #include "yall/utils.h"
-
-// MSVC 12.0
-#if (_MSC_VER == 1800)
-#	define inline __inline
-#endif
+#include "yall/msvc_defines.h"
 
 /*
  * yall_enable_debug : enable the debug mode on the library. This
