@@ -14,6 +14,11 @@ done
 #    * USE_FUNC : __func__ is use on Windows, which leads to a false positive
 for file in $(find src include -regex '.*\.\(c\|h\)')
 do
+    # Avoid warning on C++ code
+    if [[ $file == *"cpp"* ]]; then
+        continue
+    fi
+
     ./resources/checkpatch.pl -q --ignore CONST_STRUCT,INITIALISED_STATIC,SPACING,GLOBAL_INITIALISERS,NEW_TYPEDEFS,USE_FUNC --no-tree \
          -f $file
 done
