@@ -13,6 +13,8 @@ Current version (1.2.0) changelog
 		* Update soname (yall.so -> yall.so.major.minor -> yall.so.major.minor.patch)
 		* Install target now install 'README.md' and 'changelog' to 'share' folder prefixed with 'yall_'
 		* Delete old log file only when 's->output_file' is defined, avoid to call 'unlink()' with 'NULL'
+		* Create a 'include/yall/cpp' folder to store C++ code
+		* Create a 'include/yall/msvc_defines.h' to store MSVC preprocessor defines
 	[TEST]
 		* Add 'make checkstyle' target to run checkstyle on sources
 		* Add 'make validate' target which run script checking valgrind, unit, coverage, build, checkstyle...
